--- a/src/react-app/src/index.css
+++ b/src/react-app/src/index.css
@@ -1,5 +1,10 @@
 @import url('../node_modules/bulma/css/bulma.css');
 
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,6 +12,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding-top: 52px; /* Height of your navbar */
+  padding-bottom: 40px; /* Height of your footer */
 }
 
 code {
