Made changes on associate component, handlers and repository.

--- a/src/react-app/src/styles/login.css
+++ b/src/react-app/src/styles/login.css
@@ -2,3 +2,11 @@
   color: white;
   background-color: hsl(313.41deg 82.49% 57.45%);
 }
+
+.blur-transition {
+  transition: filter 0.5s ease-in-out; /* Smooth transition for the blur effect */
+}
+
+.blurred {
+  filter: blur(8px); /* Apply blur effect */
+}
